--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 			<br />
 			<a style="font-size:72pt; font-weight:bold; color: green" href="https://youtube.com">YOUTUBE</a>
 			<br />
+			<a style="font-size:72pt; font-weight:bold; color: green" href="https://github.com/superkid200">GITHUB PROFIT</a>
+			<br />
 			<a style="font-size:72pt; font-weight:bold; color: blue">TRIGGERED</a>
 			<br />
 			<a style="font-size:72pt; font-weight:bold; color: purple">WINDOWS SOVIT EDITZION (OK!)</a>
