--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 			<br />
 			<a style="font-size:72pt; font-weight:bold; color: navy" href="https://github.com/superkid200">GITHUB PROFIT</a>
 			<br />
+			<a style="font-size:72pt; font-weight:bold; color: salmon" href="https://github.com/superkid200/superkid200.github.io">GITHUB WEBSIT REPOSTITOORI</a>
+			<br />
 			<a style="font-size:72pt; font-weight:bold; color: blue" href="triggered.html">TRIGGERED</a>
 			<br />
 			<a style="font-size:72pt; font-weight:bold; color: purple">WINDOWS SOVIT EDITZION (OK!)</a>
