No memes for you!

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<p>And also, please do not mess with the website, or otherwise the earth will not go too good. By the way, here are some links that you will find useful.</p>
 		<p>Thank you for visiting this website!</p>
 		<center>
-			<a style="font-size:72pt; font-weight:bold; color: red">MEMES!!!!!!! (NO LAUGH CHALLENGE)</a>
+			<a style="font-size:72pt; font-weight:bold; color: red" href="memes.html">MEMES!!!!!!! (NO LAUGH CHALLENGE)</a>
 			<br />
 			<a style="font-size:72pt; font-weight:bold; color: green" href="https://youtube.com">YOUTUBE</a>
 			<br />
