--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
   </head>
   <body>
     <h1 class="dongle">Dongle</h1>
+    <p>Hello, I'm <span class="dongle">Dongle</span>!
+      <br>I'm named after that little gadget that everyone loves to hate (apparently).
+      <br>If you want to check some of my stuff, you are welcome to (spoiler alert: they are kinda garbage).
+    </p>
   </body>
 </html>
