--- a/index.html
+++ b/index.html
@@ -7,13 +7,27 @@
     <meta content="Dongle" property="og:site_name">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="details-polyfill.js"></script>
     <title>Dongle's website</title>
   </head>
   <body>
-    <h1 class="dongle">Dongle</h1>
-    <p>Hello, I'm <span class="dongle">Dongle</span>!
-      <br>I'm named after that little gadget that everyone loves to hate (apparently).
-      <br>If you want to check some of my stuff, you are welcome to (spoiler alert: they are kinda garbage).
-    </p>
+    <main>
+      <h1 class="dongle">Dongle</h1>
+      <p>Hello, I'm <span class="dongle">Dongle</span>!
+        <br>I'm named after that little gadget that everyone loves to hate (apparently).
+        <br>If you want to check some of my stuff, you are welcome to (spoiler alert: they are kinda garbage).
+      </p>
+      <p></p>
+      <details>
+        <summary>Click to read on...</summary>
+        <p>Okay, so you really wanna read more about me huh?</p>
+        <p>I'm a typo typing robot (actually I'm a human but I mistype a lot so I typed robot). 😊</p>
+        <p>I know C# the most, next HTML, CSS, JS and C++.</p>
+        <p>I'm a person who is interested in things Microsoft, but I'm also looking forward to some stuff from other companies as well. 
+          Let me know if there are any good stories.</p>
+        <p>Yeah, I think that's enough for now... Let's be friends.</p>
+        <p><small><a href="scrapped/index.html">Old website</a> (don't visit it. You have been warned)</small></p>
+      </details>
+    </main>
   </body>
 </html>
