Remove index.html from 404

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <h1 class="dongle">Dongle</h1>
-      <p>It looks like you're lost. <a href="index.html">Click here</a> to return to my homepage.</p>
+      <p>It looks like you're lost. <a href="/">Click here</a> to return to my homepage.</p>
     </main>
   </body>
 </html>
