--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <br>I'm named after that little gadget that everyone loves to hate (apparently).
         <br>If you want to check some of my stuff, you are welcome to (spoiler alert: they are kinda garbage).
       </p>
+      <noscript>It looks like you've disabled JavaScript, so unfortunately you cannot see what's in here.</noscript>
+      <script src="script.js"></script>
       <p></p>
       <details>
         <summary>Click to read on...</summary>
