--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta content="Dongle" property="og:title">
     <meta content="Dongle's corner on the Internet" property="og:description">
     <meta content="Dongle" property="og:site_name">
+    <meta content="Wumpus.png" property="og:image">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="details-polyfill.js"></script>
