--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         <p>I'm a person who is interested in things Microsoft, but I'm also looking forward to some stuff from other companies as well. 
           Let me know if there are any good stories.</p>
         <p>Yeah, I think that's enough for now... Let's be friends.</p>
-        <p><small><a href="scrapped/index.html">Old website</a> (don't visit it. You have been warned)</small></p>
       </details>
+      <hr>
+      <a href="/">Home</a> | <a href="https://twitter.com/a_donglee">Twitter</a> | <a href="https://reddit.com/user/Electronic-Bat-1830">Reddit</a> | <a href="scrapped/index.html">Old mode (not recommended)</a>
     </main>
   </body>
 </html>
