--- a/links.html
+++ b/links.html
@@ -22,7 +22,7 @@
           .then(function (response) {
             return response.text();
           })
-          .then(function (links) (
+          .then(function (links) {
             document.getElementById('links').innerText = links;
           });
       </script>
