--- a/links.html
+++ b/links.html
@@ -39,7 +39,21 @@
             return response.text();
           })
           .then(function (links) {
-            document.getElementById('links').innerText = links;
+            var linkslist = links.split('\n');
+            for (int i = 0; i < linkslist.length; i++) {
+              var line = linkslist[i];
+              if (line.startsWith("#"))
+              {
+                // Title
+                document.getElementById('links').innerHTML += "<p><b>" + line.substring(2) + "</b><br>";
+              }
+              else if (line === "") {
+                document.getElementById('links').innerHTML += "</p>";
+              }
+              else {
+                document.getElementById('links').innerHTML += "<a href='" + line + "'>" + line + "</a>";
+              }
+            }
           });
       </script>
       <hr>
