--- a/links.html
+++ b/links.html
@@ -19,6 +19,18 @@
         border-radius: 10px;
       }
       
+      b {
+        font-family: "Segoe UI Variable Small",
+            "Segoe UI",
+            -apple-system,
+            BlinkMacSystemFont,
+            Helvetica,
+            Arial,
+            sans-serif,
+            "Apple Color Emoji",
+            "Segoe UI Emoji"
+      }
+      
       @media (prefers-color-scheme: dark) {
         .linksdiv {
           background-color: #555555;
