--- a/scrapped/index.html
+++ b/scrapped/index.html
@@ -3,7 +3,7 @@
 		<title>superkid306 Website</title>
 	</head>
 	<body>
-		<p>Important: This version of the website has been scrapped and replaced by a much better implementation. <a href="https://superkid200.github.io/">Link</a></p>
+		<p>Important: This version of the website has been scrapped and replaced by a much better implementation. <a href="https://superkid200.github.io/">Link</a>. The website below is only for archival purposes and might be rid of at any time.</p>
 		<marquee direction="right" behavior="alternate" style="font-weight:bold;font-size:24pt">superkid306 Website</marquee>
 		<p>This is my website. This website is currently in development, where my devs spend no time improving it.</p>
 		<p>For more information on the dev, please go to >>127.0.0.1<< Internal use only! (which means only me can visit it)</p>
