--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <title>Dongle's website</title>
   </head>
   <body>
+    <style>
+      div {
+        white-space: pre-wrap; /* CSS3 */    
+        white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+        white-space: -pre-wrap; /* Opera 4-6 */    
+        white-space: -o-pre-wrap; /* Opera 7 */    
+        word-wrap: break-word; /* Internet Explorer 5.5+ */
+      }
+    </style>
     <main>
       <h1 class="dongle">Dongle</h1>
       <p>Hello, I'm <span class="dongle">Dongle</span>!
