--- a/links.html
+++ b/links.html
@@ -31,6 +31,14 @@
             "Segoe UI Emoji"
       }
       
+      div {
+        white-space: pre-wrap; /* CSS3 */    
+        white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+        white-space: -pre-wrap; /* Opera 4-6 */    
+        white-space: -o-pre-wrap; /* Opera 7 */    
+        word-wrap: break-word; /* Internet Explorer 5.5+ */
+      }
+      
       @media (prefers-color-scheme: dark) {
         .linksdiv {
           background-color: #555555;
