Add footer to 404

--- a/404.html
+++ b/404.html
@@ -11,6 +11,8 @@
     <main>
       <h1 class="dongle">Dongle</h1>
       <p>It looks like you're lost. <a href="/">Click here</a> to return to my homepage.</p>
+      <hr>
+      <a href="/">Home</a> | <a href="https://raw.githubusercontent.com/superkid200/superkid200.github.io/master/LICENSE">License</a> | <a href="https://twitter.com/a_donglee">Twitter</a> | <a href="https://reddit.com/user/Electronic-Bat-1830">Reddit</a> | <a href="links.html">More links</a> | <a href="scrapped/index.html">Old mode (not recommended)</a>
     </main>
   </body>
 </html>
