Mistype Laughing out loud

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <summary>Click to read on...</summary>
         <p>Okay, so you really wanna read more about me huh?</p>
         <p>I'm a typo typing robot (actually I'm a human but I mistype a lot so I typed robot). 😊</p>
-        <p>I've broken my computer, many times. In fact, I nearly bricked the UEFI BIOS by pressing the power button, and damaged the GPT of my drive.</p>
+        <p>I've broken my computer, many times. In fact, I nearly bricked the UEFI BIOS by pressing the reset button on my chassis, and damaged the GPT of my drive.</p>
         <p>I know C# the most, next HTML, CSS, JS and C++.</p>
         <p>I'm a person who is interested in things Microsoft, but I'm also looking forward to some stuff from other companies as well. 
           Let me know if there are any good stories.</p>
