--- a/links.html
+++ b/links.html
@@ -50,9 +50,7 @@
     <main>
       <h1 class="dongle">Dongle's link list</h1>
       <p>The link list is designed to be machine-readable.<br>You can find the raw text file <a href="links.txt">here</a></p>
-      <div id="links" class="linksdiv">
-        Loading... If it doesn't load for you, or if you have disabled JavaScript, use the link to the raw text file. Sorry for the inconvenience.
-      </div>
+      <div id="links" class="linksdiv">Loading... If it doesn't load for you, or if you have disabled JavaScript, use the link to the raw text file. Sorry for the inconvenience.</div>
       <script>
         fetch('./links.txt')
           .then(function (response) {
