Redirect Style.css
Set stylesheet to "/style.css" instead of "style.css" so the style applies to every subdirectories.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="Dongle's corner on the Internet" property="og:description">
     <meta content="Dongle" property="og:site_name">
     <meta content="https://superkid200.github.io/Wumpus.png" property="og:image">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="details-polyfill.js"></script>
     <title>Dongle's website</title>
