--- a/links.html
+++ b/links.html
@@ -6,7 +6,7 @@
     <meta content="Dongle's link list" property="og:description">
     <meta content="Dongle" property="og:site_name">
     <meta content="https://superkid200.github.io/Wumpus.png" property="og:image">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dongle's website</title>
     <style>
