--- a/links.html
+++ b/links.html
@@ -75,7 +75,7 @@
           });
       </script>
       <hr>
-      <a href="/">Home</a> | <a href="https://raw.githubusercontent.com/superkid200/superkid200.github.io/master/LICENSE">License</a> | <a href="https://twitter.com/a_donglee">Twitter</a> | <a href="https://reddit.com/user/Electronic-Bat-1830">Reddit</a> | <a href="links.html">More links</a> | <a href="scrapped/index.html">Old mode (not recommended)</a>
+      <a href="/">Home</a> | <a href="links.html">Links</a> | <a href="scrapped/index.html">Old mode (not recommended)</a>
     </main>
   </body>
 </html>
