--- a/index.html
+++ b/index.html
@@ -8,29 +8,14 @@
     <meta content="https://superkid200.github.io/Wumpus.png" property="og:image">
     <link rel="stylesheet" href="/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="details-polyfill.js"></script>
     <title>Dongle's website</title>
   </head>
   <body>
     <main>
       <h1 class="dongle">Dongle</h1>
-      <p>Hello, I'm <span class="dongle">Dongle</span>!
-        <br>I'm named after that little gadget that everyone loves to hate (apparently).
-        <br>If you want to check some of my stuff, you are welcome to (spoiler alert: they are kinda garbage).
+      <p>You are visiting <span class="dongle">Dongle</span>'s internal site.
+        <br>This website is for <span class="dongle">Dongle</span> to test stuff (and maybe break the website 😊).
       </p>
-      <noscript>It looks like you've disabled JavaScript, so unfortunately you cannot see what's in here.</noscript>
-      <script src="script.js"></script>
-      <p></p>
-      <details>
-        <summary>Click to read on...</summary>
-        <p>Okay, so you really wanna read more about me huh?</p>
-        <p>I'm a typo typing robot (actually I'm a human but I mistype a lot so I typed robot). 😊</p>
-        <p>I've broken my computer, many times. In fact, I nearly bricked the UEFI BIOS by pressing the reset button on my chassis, and damaged the GPT of my drive.</p>
-        <p>I know C# the most, next HTML, CSS, JS and C++.</p>
-        <p>I'm a person who is interested in things Microsoft, but I'm also looking forward to some stuff from other companies as well. 
-          Let me know if there are any good stories.</p>
-        <p>Yeah, I think that's enough for now... Let's be friends.</p>
-      </details>
       <hr>
       <a href="/">Home</a> | <a href="https://raw.githubusercontent.com/superkid200/superkid200.github.io/master/LICENSE">License</a> | <a href="links.html">Links</a> | <a href="scrapped/index.html">Old mode (not recommended)</a>
     </main>
