--- a/scrapped/index.html
+++ b/scrapped/index.html
@@ -3,7 +3,7 @@
 		<title>superkid306 Website</title>
 	</head>
 	<body>
-		<p>Important: This version of the website has been scrapped and replaced by a much better implementation. <a href="https://superkid200.github.io/">Link</a>. The website below is only for archival purposes and might be rid of at any time.</p>
+		<p>Important: This version of the website has been scrapped and replaced by a much better implementation. <a href="https://dongle-the-gadget.github.io/">Link</a>. The website below is only for archival purposes and might be rid of at any time.</p>
 		<marquee direction="right" behavior="alternate" style="font-weight:bold;font-size:24pt">superkid306 Website</marquee>
 		<p>This is my website. This website is currently in development, where my devs spend no time improving it.</p>
 		<p>For more information on the dev, please go to >>127.0.0.1<< Internal use only! (which means only me can visit it)</p>
@@ -15,9 +15,9 @@
 			<br />
 			<a style="font-size:72pt; font-weight:bold; color: green" href="https://youtube.com">YOUTUBE</a>
 			<br />
-			<a style="font-size:72pt; font-weight:bold; color: navy" href="https://github.com/superkid200">GITHUB PROFIT</a>
+			<a style="font-size:72pt; font-weight:bold; color: navy" href="https://github.com/dongle-the-gadget">GITHUB PROFIT</a>
 			<br />
-			<a style="font-size:72pt; font-weight:bold; color: salmon" href="https://github.com/superkid200/superkid200.github.io">GITHUB WEBSIT REPOSTITOORI</a>
+			<a style="font-size:72pt; font-weight:bold; color: salmon" href="https://github.com/dongle-the-gadget/dongle-the-gadget.github.io">GITHUB WEBSIT REPOSTITOORI</a>
 			<br />
 			<a style="font-size:72pt; font-weight:bold; color: blue" href="triggered.html">TRIGGERED</a>
 			<br />
