--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="details-polyfill.js"></script>
     <title>Dongle's website</title>
+    <meta name="google-site-verification" content="ZItz31Yrkra283Gj62xhxljpEhI_4dTyWO0B_VCmkXc" />
   </head>
   <body>
     <main>
