--- a/scrapped/index.html
+++ b/scrapped/index.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<title>superkid306 Website</title>
+		<title>dongle-the-gadget Website</title>
 	</head>
 	<body>
 		<p>Important: This version of the website has been scrapped and replaced by a much better implementation. <a href="https://dongle-the-gadget.github.io/">Link</a>. The website below is only for archival purposes and might be rid of at any time.</p>
-		<marquee direction="right" behavior="alternate" style="font-weight:bold;font-size:24pt">superkid306 Website</marquee>
+		<marquee direction="right" behavior="alternate" style="font-weight:bold;font-size:24pt">dongle-the-gadget Website</marquee>
 		<p>This is my website. This website is currently in development, where my devs spend no time improving it.</p>
 		<p>For more information on the dev, please go to >>127.0.0.1<< Internal use only! (which means only me can visit it)</p>
 		<p>Never go to <b>127.0.0.1</b> on non-internal use or I will (beep) you.</p>
@@ -24,6 +24,6 @@
 			<a style="font-size:72pt; font-weight:bold; color: purple">WINDOWS SOVIT EDITZION (OK!)</a>
 		</center>
 		<hr />
-		<p>Copyright (C) superkid306</p>
+		<p>Copyright (C) dongle-the-gadget</p>
 	</body>
 </html>
