--- a/scrapped/triggered.html
+++ b/scrapped/triggered.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<title>TRIGGERED - superkid306 Website</title>
+		<title>TRIGGERED - dongle-the-gadget Website</title>
 	</head>
 	<body>
-		<marquee direction="right" behavior="alternate" style="font-weight:bold;font-size:24pt">superkid306 Website</marquee>
+		<marquee direction="right" behavior="alternate" style="font-weight:bold;font-size:24pt">dongle-the-gadget Website</marquee>
 		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/VEYiB1y7NU4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</body>
 </html>
