--- a/scrapped/127001internal.html
+++ b/scrapped/127001internal.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<title>superkid306 Website - Internal use</title>
+		<title>dongle-the-gadget Website - Internal use</title>
 	</head>
 	<body>
-		<marquee direction="right" behavior="alternate" style="font-weight:bold;font-size:24pt">superkid306 Website</marquee>
+		<marquee direction="right" behavior="alternate" style="font-weight:bold;font-size:24pt">dongle-the-gadget Website</marquee>
 		<center><h1 style="font-size:108pt; color:red">!!!!INTERNAL USE ONLY - ONLY USE THIS PAGE IN MY NETWORK OR I WILL (BEEP) YOU UP!!!!</p></center>
 		<br/>
 		<br/>
@@ -19,11 +19,11 @@
 			<br/>
 			Please work on this website RIGHT NOW!
 			<br/>
-			superkid306
+			dongle-the-gadget
 		</p>
 		<h1>Who are the devs?</h1>
 		<ul>
-			<li>superkid306 (me!)</li>
+			<li>dongle-the-gadget (me!)</li>
 			<li>a8sdipghais</li>
 			<li>sh1is</li>
 			<li>8gslai</li>
