--- a/secrets.html
+++ b/secrets.html
@@ -7,7 +7,7 @@
     <meta content="Dongle" property="og:site_name">
     <meta content="https://dongle-the-gadget.github.io/Wumpus.png" property="og:image">
     <link rel="stylesheet" href="/style.css">
-    <meta http-equiv="refresh" content="0; URL=https://bit.ly/3m5gXe5">
+    <meta http-equiv="refresh" content="0; URL=https://youtu.be/LLFhKaqnWwk">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dongle's website</title>
   </head>
