--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <script src="details-polyfill.js"></script>
     <title>Dongle's website</title>
     <meta name="google-site-verification" content="ZItz31Yrkra283Gj62xhxljpEhI_4dTyWO0B_VCmkXc" />
-<script>
-  const delay = ms => new Promise(res => setTimeout(res, ms));
-  while(true) { document.getElementById("test").innerHTML += "A"; await delay(50); }
+    <script>
+      const delay = ms => new Promise(res => setTimeout(res, ms));
+      while(true) { document.getElementById("test").innerHTML += "A"; await delay(50); }
+    </script>
   </head>
   <body style="margin:0">
     <main>
