Fuck my life and my day.
My disappointment is immeasurable and my day is ruined.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       body {
         background-color: #1c1c1c;
       }
+    
+      :root {
+        color-scheme: dark
+      }
     }
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
