--- a/test.html
+++ b/test.html
@@ -6,6 +6,6 @@
 <meta property="og:description" content="Test">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://raw.githubusercontent.com/dongle-the-gadget/dongle-the-gadget.github.io/master/Wumpus.png">
-<meta property="og:image" content="https://raw.githubusercontent.com/dongle-the-gadget/WinverUWP/main/images/WinverUWP-dark-11.png">
+<!--<meta property="og:image" content="https://raw.githubusercontent.com/dongle-the-gadget/WinverUWP/main/images/WinverUWP-dark-11.png">-->
   </head>
 </html>
