--- a/test.html
+++ b/test.html
@@ -5,7 +5,6 @@
 <meta property="og:url" content="https://dongle-the-gadget.github.io">
 <meta property="og:description" content="Test">
 <meta property="og:type" content="article">
-<meta property="og:image" content="https://raw.githubusercontent.com/dongle-the-gadget/dongle-the-gadget.github.io/master/Wumpus.png">
-<!--<meta property="og:image" content="https://raw.githubusercontent.com/dongle-the-gadget/WinverUWP/main/images/WinverUWP-dark-11.png">-->
+<meta property="og:image" content="https://dongle-the-gadget.github.io/Wumpus.png">
   </head>
 </html>
