--- a/test.html
+++ b/test.html
@@ -6,5 +6,6 @@
 <meta property="og:description" content="Test">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://dongle-the-gadget.github.io/Wumpus.png">
+<meta property="og:image" content="https://i.picsum.photos/id/669/1280/720.jpg?hmac=V2-sUJnihD0a4PVh9SwGnidxgMKMj0R0kSmqtiB9WyE">
   </head>
 </html>
